# monadio-plus

./: .gitignore  changelog.md  dependencies.nix  flake.nix  monadio-plus.cabal  versions
proto/MonadIO/: Paths.hs
src/: MonadIO.hs
src/FPath/: FileTypeC.hs  Rel'.hs
src/MonadError/: IO'.hs
src/MonadIO/: Base.hs  Cwd.hs  Directory.hs  FPath.hs  FStat.hs  File.hs  Flock.hs  Handle.hs  NamedHandle.hs  OpenFile.hs  Process.hs  Tasty.hs  Temp.hs  User.hs
src/MonadIO/Error/: CreateProcError.hs  ProcExitError.hs
src/MonadIO/Process/: CmdSpec.hs  CreateProc.hs  CreateProcOpts.hs  ExitInfo.hs  ExitStatus.hs  MakeProc.hs  MkInputStream.hs  MkStream.hs  MockDefault.hs  OutputDefault.hs  OutputHandles.hs  Pid.hs  Signal.hs  ToMaybeTexts.hs
src/MonadIO/T/: MonadIO.hs  Process.hs  ReadlinkTestCases.hs
t/: monadio-plus-test.hs
