-- The name of the package.
name:                monadio-plus

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.4.11.0

-- A short (one-line) description of the package.
synopsis:            IO operations, using MonadIO & MonadError with AsIOError

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:         -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:     MonadIO
                     , MonadIO.Directory
                     , MonadIO.Error.CreateProcError
                     , MonadIO.Error.ProcExitError
                     , MonadIO.File
                     , MonadIO.FPath
                     , MonadIO.FStat
                     , MonadIO.Handle
                     , MonadIO.OpenFile
                     , MonadIO.Process
                     , MonadIO.Process.CmdSpec
                     , MonadIO.Process.ExitStatus
                     , MonadIO.Process.MakeProc
                     , MonadIO.Process.MkStream
                     , MonadIO.Process.MkInputStream
                     , MonadIO.Process.OutputHandles
                     , MonadIO.Process.Signal
                     , MonadIO.Process.ToMaybeTexts
                     , MonadIO.Tasty
                     , MonadIO.Temp
                     , MonadIO.T.MonadIO

  -- modules included in this library but not exported.
  other-modules:       MonadIO.Base
                     , MonadIO.Process.CreateProc
                     , MonadIO.T.ReadlinkTestCases

  default-extensions: ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeFamilies
                    , UnicodeSyntax
                    , ViewPatterns

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, base-unicode-symbols, bytestring, containers
                     , data-textual, directory
                     , exceptions, filepath, lens, mtl, process, safe, tasty
                     , tasty-hunit, temporary, text, text-printer, unix

                     , containers-plus >= 0.0.4.0
                     , env-plus        >= 1.0.1.0
                     , exited          >= 1.0.4.0
                     , fpath           >= 1.1.4.2
                     , fstat           >= 1.0.1.0
                     , has-callstack   >= 1.0.1.0
                     , monaderror-io   >= 1.1.0.1
                     , more-unicode    >= 0.0.15.0
                     , tasty-plus      >= 1.5.0.1
                     , tfmt            >= 0.2.4.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite monadio-plus-test
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          monadio-plus-test.hs
  build-depends:    base, monadio-plus, tasty
  default-language: Haskell2010

-------------------------------------------------------------------------------
