-- The name of the package.
name:                monadio-plus

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             2.5.1.40

-- A short (one-line) description of the package.
synopsis:            IO operations, using MonadIO & MonadError with AsIOError

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:         -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules: MonadIO
                 , MonadIO.Base
                 , MonadIO.Directory
                 , MonadIO.Error.CreateProcError
                 , MonadIO.Error.ProcExitError
                 , MonadIO.File
                 , MonadIO.Flock
                 , MonadIO.FPath
                 , MonadIO.FStat
                 , MonadIO.Cwd
                 , MonadIO.NamedHandle
                 , MonadIO.OpenFile
                 , MonadIO.Process
                 , MonadIO.Process.CmdSpec
                 , MonadIO.Process.ExitInfo
                 , MonadIO.Process.ExitStatus
                 , MonadIO.Process.MakeProc
                 , MonadIO.Process.MkInputStream
                 , MonadIO.Process.OutputHandles
                 , MonadIO.Process.Pid
                 , MonadIO.Process.Signal
                 , MonadIO.Process.ToMaybeTexts
                 , MonadIO.Tasty
                 , MonadIO.Temp
                 , MonadIO.User

                 , MonadIO.T.MonadIO

  -- modules included in this library but not exported.
  other-modules: MonadIO.Paths
               , MonadIO.Process.CreateProc
               , MonadIO.T.Process
               , MonadIO.T.ReadlinkTestCases

  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , ExistentialQuantification
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , LambdaCase
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeFamilies
                    , UnicodeSyntax
                    , ViewPatterns

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, base-unicode-symbols, bytestring, containers
                     , data-textual, deepseq, directory, exceptions, filelock
                     , filepath, lens, mtl, process, safe, tasty-hunit
                     , temporary, text, text-printer, unix

                     , base1t          >= 0.0.5.0
                     , containers-plus >= 0.0.10.1
                     , env-plus        >= 1.0.7.0
                     , exited          >= 1.0.4.1
                     , fpath           >= 1.3.2.0
                     , fstat           >= 1.0.2.0
                     , monaderror-io   >= 1.2.5.0
                     , natural         >= 0.0.1.0
                     , tasty-plus      >= 1.5.1.1

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

--------------------------------------------------------------------------------

test-suite monadio-plus-test
  ghc-options:      -O2 -W -Wall -fhelpful-errors
  type:             exitcode-stdio-1.0
  hs-source-dirs:   t
  main-is:          monadio-plus-test.hs
  build-depends:    base, monadio-plus, tasty
  default-language: Haskell2010

--------------------------------------------------------------------------------

executable cwd
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  -- add +RTS -xc -KK for 1K stack
  -- add ?RTS -xt -hy to produce a usage graph
  main-is:             cwd.hs
  hs-source-dirs:      bin
  build-depends:       base, data-textual

                     , fpath
                     , monaderror-io
                     , more-unicode >= 0.0.17.1

                     , monadio-plus
  default-extensions:  LambdaCase
                     , NoImplicitPrelude
                     , PatternSynonyms
                     , TypeApplications
                     , UnicodeSyntax
  default-language:    Haskell2010

--------------------------------------------------------------------------------

executable cwd_
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  -- add +RTS -xc -KK for 1K stack
  -- add ?RTS -xt -hy to produce a usage graph
  main-is:             cwd_.hs
  hs-source-dirs:      bin
  build-depends:       base, data-textual

                     , fpath
                     , monaderror-io, more-unicode
                     , monadio-plus
  default-extensions:  LambdaCase
                     , NoImplicitPrelude
                     , PatternSynonyms
                     , TypeApplications
                     , UnicodeSyntax
  default-language:    Haskell2010

--------------------------------------------------------------------------------
